ProgettoDSBD_BarbagalloCaneva/Kubernetes/k8s/50-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: docker.io/library/frontend:latest
        imagePullPolicy: IfNotPresent
        name: frontend
        ports:
        - containerPort: 80
      restartPolicy: Always
