ProgettoDSBD_BarbagalloCaneva/Kubernetes/k8s/20-docdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docdb
spec:
  ports:
    - port: 3306
  selector:
    app: docdb
