ProgettoDSBD_BarbagalloCaneva/Kubernetes/k8s/20-docservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docservice
spec:
  type: NodePort
  ports:
  - name: "8082"
    port: 8082
    targetPort: 8082
  selector:
    app: docservice
