ProgettoDSBD_BarbagalloCaneva/Kubernetes/k8s/20-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: NodePort
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    app: frontend
