ProgettoDSBD_BarbagalloCaneva/Kubernetes/k8s/20-receptiondb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: receptiondb
spec:
  ports:
    - port: 3306
  selector:
    app: receptiondb
