ProgettoDSBD_BarbagalloCaneva/Kubernetes/k8s/20-receptionservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: receptionservice
spec:
  type: NodePort
  ports:
  - name: "8083"
    port: 8083
    targetPort: 8083
  selector:
    app: receptionservice
