ProgettoDSBD_BarbagalloCaneva/Kubernetes/k8s/20-reglog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reglog
spec:
  type: NodePort
  ports:
  - name: "http-traffic"
    port: 8081
    targetPort: 8081
  selector:
    app: reglog
