ProgettoDSBD_BarbagalloCaneva/Kubernetes/k8s/20-reglogdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reglogdb
spec:
  ports:
    - port: 3306
  selector:
    app: reglogdb
